prevented stats view from moving with scrollbar fix, updated mobile layout

--- a/apps/frontend/styles/globals.css
+++ b/apps/frontend/styles/globals.css
@@ -2,8 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body, #__next {
+html,
+body,
+#__next {
   height: 100%;
+}
+
+html {
+  scrollbar-gutter: stable;
 }
 
 body {
@@ -38,6 +44,7 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
   }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -64,7 +71,10 @@ body {
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
-  * { @apply border-border; }
+
+  * {
+    @apply border-border;
+  }
 }
 
 
@@ -73,6 +83,7 @@ body {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
